// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard > snapshots > matches snapshot with icon 1`] = `
<div>
  <div
    class="flex items-center gap-0_75 bg-neutral-100 rounded-default px-0_75 py-0_75 h-4_5"
  >
    <div
      aria-hidden="true"
      class="w-3 h-3 shrink-0"
    >
      <svg
        data-testid="mock-icon"
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <circle
          cx="24"
          cy="24"
          fill="currentColor"
          r="20"
        />
      </svg>
    </div>
    <div
      class="flex flex-col justify-between min-w-8"
    >
      <span
        class="text-body-small leading-body-small font-normal"
        style="color: var(--color-neutral-500);"
      >
        Completed
      </span>
      <span
        class="text-h5 leading-h5 font-semibold"
        style="color: var(--color-neutral-800);"
      >
        18
      </span>
    </div>
  </div>
</div>
`;

exports[`MetricCard > snapshots > matches snapshot with string value 1`] = `
<div>
  <div
    class="flex items-center gap-0_75 bg-neutral-100 rounded-default px-0_75 py-0_75 h-4_5"
  >
    <div
      aria-hidden="true"
      class="w-3 h-3 shrink-0"
    >
      <svg
        data-testid="mock-icon"
        height="48"
        viewBox="0 0 48 48"
        width="48"
      >
        <circle
          cx="24"
          cy="24"
          fill="currentColor"
          r="20"
        />
      </svg>
    </div>
    <div
      class="flex flex-col justify-between min-w-8"
    >
      <span
        class="text-body-small leading-body-small font-normal"
        style="color: var(--color-neutral-500);"
      >
        Status
      </span>
      <span
        class="text-h5 leading-h5 font-semibold"
        style="color: var(--color-neutral-800);"
      >
        Active
      </span>
    </div>
  </div>
</div>
`;

exports[`MetricCard > snapshots > matches snapshot without icon 1`] = `
<div>
  <div
    class="flex items-center gap-0_75 bg-neutral-100 rounded-default px-0_75 py-0_75 h-4_5"
  >
    <div
      class="flex flex-col justify-between min-w-8"
    >
      <span
        class="text-body-small leading-body-small font-normal"
        style="color: var(--color-neutral-500);"
      >
        Completed
      </span>
      <span
        class="text-h5 leading-h5 font-semibold"
        style="color: var(--color-neutral-800);"
      >
        18
      </span>
    </div>
  </div>
</div>
`;
